# cellwright

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
examples/: formula_demo.json  test_sum.json
plugins/: CMakeLists.txt
plugins/bond/: Bond.hpp  CMakeLists.txt  bond_plugin.cpp  bond_plugin.hpp  bond_register.cpp
plugins/example_stats/: CMakeLists.txt  example_stats.cpp  example_stats.hpp
plugins/py_bond/: py_bond.py
plugins/scientific/: CMakeLists.txt  scientific.cpp  scientific.hpp
src/: main.cpp
src/app/: App.cpp  App.hpp  AppState.cpp  AppState.hpp  AutoSave.cpp  AutoSave.hpp  Settings.cpp  Settings.hpp
src/builtin/: LogicFunctions.cpp  LogicFunctions.hpp  MathFunctions.cpp  MathFunctions.hpp  SqlFunction.cpp  SqlFunction.hpp  StatFunctions.cpp  StatFunctions.hpp  TextFunctions.cpp  TextFunctions.hpp
src/core/: Arena.cpp  Arena.hpp  ArrowBridge.cpp  ArrowBridge.hpp  CellAddress.cpp  CellAddress.hpp  CellFormat.cpp  CellFormat.hpp  CellInputService.cpp  CellInputService.hpp  CellValue.cpp  CellValue.hpp  Clipboard.cpp  Clipboard.hpp  Column.cpp  Column.hpp  Command.cpp  Command.hpp  ConditionalFormat.hpp  DateSerial.cpp  DateSerial.hpp  DuckDBEngine.cpp  DuckDBEngine.hpp  FillPattern.hpp  FormulaAdjust.cpp  FormulaAdjust.hpp  RowFilter.hpp  Sheet.cpp  Sheet.hpp  SimdOps.cpp  SimdOps.hpp  Workbook.cpp  Workbook.hpp
src/formula/: ASTNode.hpp  AsyncRecalcEngine.cpp  AsyncRecalcEngine.hpp  DependencyGraph.cpp  DependencyGraph.hpp  Evaluator.cpp  Evaluator.hpp  FunctionRegistry.cpp  FunctionRegistry.hpp  Parser.cpp  Parser.hpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp
src/io/: CsvIO.cpp  CsvIO.hpp  WorkbookIO.cpp  WorkbookIO.hpp
src/plugin/: DropHandler.cpp  DropHandler.hpp  IFunction.hpp  IPanel.hpp  PluginAllowlist.cpp  PluginAllowlist.hpp  PluginManager.cpp  PluginManager.hpp  PyFunctionPlugin.cpp  PyFunctionPlugin.hpp
src/ui/: AutocompletePopup.cpp  AutocompletePopup.hpp  CellEditor.cpp  CellEditor.hpp  ChartPanel.cpp  ChartPanel.hpp  FindBar.cpp  FindBar.hpp  FormulaBar.cpp  FormulaBar.hpp  MainWindow.cpp  MainWindow.hpp  SpreadsheetGrid.cpp  SpreadsheetGrid.hpp  SqlPanel.cpp  SqlPanel.hpp  StyleSetup.cpp  StyleSetup.hpp  ToastManager.cpp  ToastManager.hpp
src/util/: ConfigDir.hpp  Sha256.hpp  stb_image_write_impl.cpp
tests/: CMakeLists.txt  test_arena.cpp  test_arrow_bridge.cpp  test_async_recalc.cpp  test_bond_plugin.cpp  test_cell_address.cpp  test_clipboard.cpp  test_column.cpp  test_command.cpp  test_csv.cpp  test_date_serial.cpp  test_dependency_graph.cpp  test_duckdb_engine.cpp  test_evaluator.cpp  test_format.cpp  test_hot_reload.cpp  test_parser.cpp  test_plugin_allowlist.cpp  test_plugin_interface.cpp  test_python_plugin.cpp  test_row_col_ops.cpp  test_scientific_plugin.cpp  test_sheet.cpp  test_simd_ops.cpp  test_sort.cpp  test_text_functions.cpp  test_tokenizer.cpp  test_workbook_io.cpp
tests/python/: test_arrow_interop.py  test_smoke.py
